[package]
name = "redis_cache"
edition.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { workspace = true }
serde_json = { workspace = true }
serde-redis = "0.13.0"

[lints]
workspace = true
